<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInput"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="clearBtn"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#DD2C00" />


            <Button
                android:id="@+id/button_bracket"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="parenthesisBtn"
                android:text="@string/parenthesis"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_expo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="exponentialBtn"
                android:text="@string/exponent"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="divideBtn"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sevenBtn"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="eightBtn"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="nineBtn"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="multiplyBtn"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fourBtn"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fiveBtn"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sixBtn"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button12"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="minusBtn"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="oneBtn"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="twoBtn"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="threeBtn"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button17"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="addBtn"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_plusminus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="plusMinusBtn"
                android:text="@string/plusMinus"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="zeroBtn"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_dot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="dotBtn"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_equals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="equalsBtn"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#43A043" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/userInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"
        android:inputType="none"
        tools:ignore="LabelFor"
        android:textSize="36sp"
        android:textAlignment="textEnd"/>

    <ImageButton
        android:id="@+id/button_backspace"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/backspace"
        android:onClick="backspaceBtn"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backspace" />
</androidx.constraintlayout.widget.ConstraintLayout>